[project]
name = "sagemaker-rightline"
requires-python = ">=3.8"
version = "0.0.0"
description = ""
authors = [
    {name = "stiebels", email = "stiebels@github.com"},
    {name = "dipanjank", email = "dipanjank@github.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["sagemaker", "pipeline", "validation"]
maintainers = [
    {name = "stiebels", email = "stiebels@github.com"},
    {name = "dipanjank", email = "dipanjank@github.com"},
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: MLOPS",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "boto3>=1.26",
    "pandas==2",
    "sagemaker>=2.159",
]

[project.optional-dependencies]
dev = [
    "moto[all]",
    "pytest",
    "pytest-cov",
    "pyproject-flake8",
    "jupyter",
    "build",
]

[project.urls]  # Optional
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
per-file-ignores = [
    'tests/*:F401,F811',
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-v --cov sagemaker_rightline --cov-report term --cov-fail-under=95"
