[project]
name = "sagemaker-rightline"
requires-python = ">=3.8"
dynamic = ["version"]
description = "Python package to easily validate properties of a SageMaker Pipeline."
authors = [
    {name = "stiebels", email = "stiebels@github.com"},
    {name = "dipanjank", email = "dipanjank@github.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["sagemaker", "pipeline", "validation"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "boto3>=1.26",
    "pandas==2",
    "sagemaker>=2.159",
]

[project.optional-dependencies]
dev = [
    "moto[all]",
    "pytest",
    "pytest-cov",
    "pyproject-flake8",
    "jupyter",
    "build",
]

[project.urls]
"Homepage" = "https://github.com/stiebels/sagemaker-rightline"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "sagemaker_rightline.__version__"}

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
per-file-ignores = [
    'tests/*:F401,F811',
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-v --cov sagemaker_rightline --cov-report term --cov-fail-under=95"
